--- a/vignettes/DIscBIO-vignette.Rmd
+++ b/vignettes/DIscBIO-vignette.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-![DIscBIO](DiscBIO.png){width=80%}
+![DIscBIO](DiscBIO.png){width=90%}
 
 The pipeline consists of four successive steps: data pre-processing, cellular clustering and pseudo-temporal ordering, determining differential expressed genes and identifying biomarkers.
 
@@ -22,7 +22,7 @@ opts_chunk$set(fig.width=7, fig.height=7)
 
 ```{r}
 library(DIscBIO)
-library(enrichR)
+library(enrichR, quiet = TRUE)
 ```
 
 ## Loading dataset
@@ -31,8 +31,8 @@ The dataset should be formatted in a data frame where columns refer to samples a
 
 
 ```{r}
-DataSet <- valuesG1msReduced
-head(DataSet)
+FileName<-data("valuesG1msReduced")
+DataSet<-get(FileName)
 ```
 
 ## 1. Data Pre-processing
@@ -47,10 +47,10 @@ The key idea in filtering genes is to appoint the genes that manifest abundant v
 In case the raw data does not include ERCC spike-ins, genes will be only filtered based on minimum expression in certain number of cells.
 
 
-![DataPre-processing](Data-Preprocessing.png){width=80%}
+![DataPre-processing](Data-Preprocessing.png){width=90%}
 
 ```{r}
-sc <- DISCBIO(DataSet)    
+sc<- DISCBIO(DataSet)
 ```
 
 ### 1.1. Filtering and normalizing the raw data that includes ERCCs
@@ -78,7 +78,7 @@ To Finalize the preprocessing the function FinalPreprocessing() should be implem
 
 
 ```{r}
-sc<-NoiseFiltering(sc,percentile=0.9, CV=0.2)
+sc<-NoiseFiltering(sc,percentile=0.9, CV=0.2)       
 
 ####  Normalizing the reads without any further gene filtering
 sc<-Normalizedata(sc, mintotal=1000, minexpr=0, minnumber=0, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000) 
@@ -120,7 +120,7 @@ if (OnlyExpressionFiltering==TRUE){
 
 Cellular clustering is performed according to the gene expression profiles to detect cellular sub-population with unique properties. After clustering, pseudo-temporal ordering is generated to indicate the cellular differentiation degree. 
 
-![PSCAN](Clustering.png){width=80%}
+![PSCAN](Clustering.png){width=90%}
 
 ## 2.1. K-means Clustering
 
@@ -141,11 +141,11 @@ The Clustexp() functions has several parameters:
 - rseed Integer number. Random seed to enforce reproducible clustering results. Default is 17000.
 - quiet if `TRUE`, intermediate output is suppressed
 
-![DIsccBIO](KM1.png){width=80%}
+![DIsccBIO](KM1.png){width=90%}
 
 
 ```{r}
-sc<- Clustexp(sc,cln=3,quiet=TRUE)    #### K-means clustering to get three clusters
+sc<- Clustexp(sc,cln=2,quiet=T)    #### K-means clustering to get three clusters
 plotGap(sc)        ### Plotting gap statisticssc<- Clustexp(sc, clustnr=20,bootnr=50,metric="pearson",do.gap=T,SE.method="Tibs2001SEmax",SE.factor=.25,B.gap=50,cln=K,rseed=17000)
 ```
 
@@ -166,11 +166,11 @@ PSCAN enables the robustness assessment of the detected clusters in terms of sta
 ```{r}
 # Silhouette of k-means clusters
 par(mar=c(6,2,4,2))
-plotSilhouette(sc,K=3)       # K is the number of clusters
+plotSilhouette(sc,K=2)       # K is the number of clusters
 ```
 
 ```{r}
-Jaccard(sc,Clustering="K-means", K=3, plot = TRUE)     # Jaccard of k-means clusters
+Jaccard(sc,Clustering="K-means", K=2, plot = TRUE)     # Jaccard of k-means clusters
 ```
 
 #### 2.1.3. Cluster plotting using tSNE maps
@@ -181,8 +181,8 @@ Here you visualize the K-means clusters using t-distributed stochastic neighbor 
 ```{r}
 ############ Plotting K-means clusters
 plottSNE(sc)
-plotKmeansLabelstSNE(sc) # To plot the the ID of the cells in eacj cluster
-plotSymbolstSNE(sc,types=sub("(\\_\\d+)$","", names(sc@ndata))) # To plot the the ID of the cells in each cluster
+plotKmeansLabelstSNE(sc)                                         # To plot the the ID of the cells in eacj cluster
+plotSymbolstSNE(sc,types=sub("(\\_\\d+)$","", names(sc@ndata)))  # To plot the the ID of the cells in eacj cluster
 ```
 
 ### Defining outlier cells based on K-means Clustering
@@ -194,7 +194,7 @@ In case the user decided to remove outlier cells, the user should set RemovingOu
 
 ```{r}
 outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes. 
-Outliers<- FindOutliersKM(sc, K=3, outminc=5,outlg=outlg,probthr=.5*1e-3,thr=2**-(1:40),outdistquant=.75, plot = TRUE, quiet = FALSE)
+Outliers<- FindOutliersKM(sc, K=2, outminc=5,outlg=outlg,probthr=.5*1e-3,thr=2**-(1:40),outdistquant=.75, plot = TRUE, quiet = FALSE)
 
 RemovingOutliers=FALSE     
 # RemovingOutliers=TRUE                    # Removing the defined outlier cells based on K-means Clustering
@@ -222,14 +222,14 @@ The similarities between single-cells were computed by Euclidean distances of Pe
 
 
 ```{r}
-KMclustheatmap(sc,hmethod="single", plot = TRUE) 
+KMclustheatmap(sc,hmethod="single", plot = TRUE)
 ```
 
 #### 2.1.6 Plotting the gene expression of a particular gene in a tSNE map
 
 
 ```{r}
-g='ENSG00000000003'                   #### Plotting the expression of  MT-RNR2
+g='ENSG00000010244'                   #### Plotting the expression of  MT-RNR2
 plotExptSNE(sc,g)
 ```
 
@@ -237,7 +237,7 @@ plotExptSNE(sc,g)
 
 Differentially expressed genes between individual clusters are identified using the significance analysis of sequencing data (SAMseq), which is a new function in significance analysis of microarrays (Li and Tibshirani 2011) in the samr package v2.0 (Tibshirani et all., 2015). SAMseq is a non-parametric statistical function dependent on Wilcoxon rank statistic that equalizes the sizes of the library by a resampling method accounting for the various sequencing depths. The analysis is implemented over the pure raw dataset that has the unnormalized expression read counts after excluding the ERCCs. Furthermore, DEGs in each cluster comparing to all the remaining clusters are determined using binomial differential expression, which is based on binomial counting statistics.
 
-![DIsccBIO](KM2.png){width=80%}
+![DIsccBIO](KM2.png){width=90%}
 
 ## 3.1 Identifying DEGs using SAMseq
 
@@ -249,13 +249,466 @@ The user can define DEGs between all clusters generated by either K-means or mod
 
 ```{r degKM}
 ####### differential expression analysis between cluster 1 and cluster 3 of the Model-Based clustering using FDR of 0.05
-cdiff <- DEGanalysis2clust(
-  sc, Clustering="K-means", K=3, fdr=0.1, name="Name", export=TRUE, quiet=TRUE
-)
+cdiff<-DEGanalysis2clust(sc,Clustering="K-means",K=2,fdr=0.05,name="Name",First="CL1",Second="CL2",export = TRUE,quiet=T)
 ```
 
 ```{r}
 #### To show the result table
 head(cdiff[[1]])                  # The first component 
 head(cdiff[[2]])                  # The second component 
+```
+
+### 3.1.2 Determining DEGs between all clusters
+
+
+##                                         ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤ Running this cell will overwrite the previous one ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤
+
+
+```R
+cdiff<-DEGanalysis(sc,Clustering="K-means",K=2,fdr=0.05,name="all_clusters",export = TRUE,quiet=T)   ####### differential expression analysis between all clusters
+```
+
+```R
+#### To show the result table
+head(cdiff[[1]])                  # The first component 
+head(cdiff[[2]])                  # The second component
+```
+
+#### 3.2 Identifying DEGs using binomial differential expression
+
+The function KMClustDiffGenes identifies differentially regulated genes for each cluster of the K-means clustering in 
+comparison to the ensemble of all cells. It returns a list with a data.frame element for each cluster that contains the mean expression across all cells not in the cluster (mean.ncl) and in the cluster (mean.cl), the fold-change in the cluster versus all remaining cells (fc), and the p-value for differential expression between all cells in a cluster and all remaining cells. The p-value is computed based on the overlap of negative binomials fitted to the count distributions within the two groups akin to DESeq.
+
+
+```R
+cdiffBinomial<-KMClustDiffGenes(sc,K=2,fdr=.01,,quiet=T)    ########## Binomial differential expression analysis
+#### To show the result table
+head(cdiffBinomial[[1]])                  # The first component 
+head(cdiffBinomial[[2]])                  # The second component
+```
+
+### Plotting the DEGs
+
+Volcano plots are used to readily show the DEGs by plotting significance versus fold-change on the y and x axes, respectively.
+
+
+```R
+name<-cdiffBinomial[[2]][2,4]    ############ Selecting the DEGs' table  ##############
+U<-read.csv(file=paste0(name),head=TRUE,sep=",")
+Vplot<-VolcanoPlot(U,value=0.001,name=name,FS=.3,fc=1)
+
+#### In case the output of this function is an error "Error in plot.window(...): need finite 'ylim' values", the adj should be set to TRUE
+### In case the user would like to get the names of the significant DEGs then FS should be set to a value of 0.3 or higher.
+```
+
+## 4. Identifying biomarkers (decision trees and networking analysis) 
+
+There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks 
+
+![DIsccBIO](KM3.png){width=90%}
+
+Decision trees are one of the most efficient classification techniques in biomarkers discovery. Here we use it to predict the sub-population of a target cell based on transcriptomic data. Two types of decision trees can be performed: classification and regression trees (CART) and J48. The decision tree analysis is implemented over a training dataset, which consisted of the DEGs obtained by either SAMseq or the binomial differential expression. The performance of the generated trees can be evaluated for error estimation by ten-fold cross validation assessment using the "J48DTeval" and "RpartEVAL" functions. The decision tree analysis requires the dataset to be class vectored by applying the “ClassVectoringDT” function.
+
+```R
+#sigDEG<-cdiff[[1]]             # DEGs gene list from SANseq
+sigDEG<-cdiffBinomial[[1]]      # DEGs gene list from Binomial analysis
+First="CL1"
+Second="CL2"
+DATAforDT<-ClassVectoringDT(sc,Clustering="K-means",K=3,First=First,Second=Second,sigDEG)
+```
+
+### 4.1. J48 Decision Tree
+
+
+```R
+j48dt<-J48DT(DATAforDT)
+summary(j48dt) 
+```
+
+#### 4.1.1. Evaluating the performance of the J48 Decision Tree
+
+
+```R
+j48dt<-J48DTeval(DATAforDT,num.folds=10,First=First,Second=Second)
+```
+
+### 4.2. RPART Decision Tree
+
+
+```R
+rpartDT<-RpartDT(DATAforDT)
+```
+
+#### 4.2.1. Evaluating the performance of the RPART Decision Tree
+
+
+```R
+rpartEVAL<-RpartEVAL(DATAforDT,num.folds=10,First=First,Second=Second)
+```
+
+### 4.3. Networking Analysis
+
+To define protein-protein interactions (PPI) over a list of genes, STRING-api is used. The outcome of STRING analysis was stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks.
+
+### 4.3.1 All DEGs
+
+
+```R
+DEGs="All DEGs"
+FileName=paste0(DEGs)
+
+data<-cdiffBinomial[[1]] [,2]           # DEGs gene list from Binomial analysis (taking only the firat 100 genes)
+#data<-cdiff[[1]] [,2]                  # From the table of the differential expression analysis between all pairs of clusters
+
+ppi<-PPI(data,FileName)
+
+networking<-NetAnalysis(ppi)
+networking                            ##### In case the Examine response components = 200 and an error "linkmat[i, ]" appeared, that means there are no PPI.
+```
+
+```R
+data=networking[1:25,1]              # plotting the network of the top 25 highly connected genes 
+network<-Networking(data,FileName,plot_width = 25, plot_height = 10)
+```
+
+### 4.3.2 Particular set of DEGs 
+
+
+```R
+############ Selecting the DEGs' table  ##############
+DEGs=cdiffBinomial[[2]][1,4]     # Up-regulated genes in cluster 1 (from the Binomial analysis)
+#DEGs=cdiff[[2]][1,4]             # Up-regulated genes in cluster 1 (from SAMseq)
+FileName=paste0(DEGs)
+
+data<-read.csv(file=paste0(DEGs),head=TRUE,sep=",")
+data<-data[,3]
+
+ppi<-PPI(data,FileName)
+
+networking<-NetAnalysis(ppi)
+networking                            ##### In case the Examine response components = 200 and an error "linkmat[i, ]" appeared, that means there are no PPI.
+
+network<-Networking(data,FileName)
+```
+
+### 4.4 Gene Enrichment Analysis
+
+```R
+dbs <- listEnrichrDbs()
+head(dbs)
+#print(dbs)
+```
+
+```R
+############ Selecting the DEGs' table  ##############
+DEGs=cdiffBinomial[[2]][1,4]     # Up-regulated genes in cluster 1 (from the Binomial analysis)
+#DEGs=cdiff[[2]][1,4]              # Up-regulated genes in cluster 1 (from SAMseq)
+
+data<-read.csv(file=paste0(DEGs),head=TRUE,sep=",")
+data<-as.character(data[,3])
+
+dbs <- c("KEGG_2013","GO_Molecular_Function_2015", "GO_Biological_Process_2015")
+enriched <- enrichr(data, dbs)
+KEGG_2013<-enriched[[1]][,c(1,2,3,9)]
+GO_Molecular_Function_2015<-enriched[[2]][,c(1,2,3,9)]
+GO_Biological_Process_2015<-enriched[[3]][,c(1,2,3,9)]
+
+GEA<-rbind(KEGG_2013,GO_Molecular_Function_2015,GO_Biological_Process_2015)
+GEA
+```
+
+## 2.2. Model-Based clustering
+
+![DIsccBIO](MB1.png){width=90%}
+
+Model-based clustering assumes that the data are generated by a model and attempts to recover the original model from the data to define cellular clusters.
+
+#### 2.2.1. Defining the Cells in the clusters generated by model-based clustering
+
+
+```R
+sc <- Exprmclust(sc,K =3,reduce = TRUE,quiet = TRUE) 
+cat("\t","     Cell-ID"," Cluster Number","\n")
+sc@MBclusters$clusterid
+
+```
+
+#### 2.2.2. Cluster plotting using PCA and tSNE maps
+
+To visualize the detected clusters, two common dimensionality reduction tools are implemented: tSNE map and principal component analysis (PCA), which is a linear dimensionality reduction method that preserves the global structure and shows how the measurements themselves are related to each other.  
+
+
+```R
+PlotmclustMB(sc)
+PCAplotSymbols(sc)
+```
+
+```R
+# Plotting the model-based clusters in tSNE maps
+sc<- comptsneMB(sc,rseed=15555,quiet = TRUE)
+plottsneMB(sc,K=3)
+plotMBLabelstSNE(sc)
+```
+
+#### 2.2.3. Evaluating the stability and consistancy of the clusters
+
+
+```R
+# Silhouette of Model-based clusters
+par(mar=c(6,2,4,2))
+plotsilhouetteMB(sc,K=3)
+```
+
+```R
+sc<- Clustexp(sc,cln=3,quiet=T)                  
+Jaccard(sc,Clustering="MB", K=3, plot = TRUE)    # Jaccard of Model based clusters
+```
+
+### Defining outlier cells based on Model-Based Clustering
+
+
+```R
+outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes. 
+Outliers<- FindOutliersMB(sc, K=3, outminc=5,outlg=outlg,probthr=.5*1e-3,thr=2**-(1:40),outdistquant=.75, plot = TRUE, quiet = T)
+
+RemovingOutliers=FALSE     
+# RemovingOutliers=TRUE                    # Removing the defined outlier cells based on K-means Clustering
+
+if(RemovingOutliers==TRUE){
+    names(Outliers)=NULL
+    Outliers
+    DataSet=DataSet[-Outliers]
+    dim(DataSet)
+    colnames(DataSet)
+    cat("Outlier cells were removed, now you need to start from the beginning")
+}
+```
+
+### 2.2.4. Cellular pseudo-time ordering based on Model-based clusters
+
+
+```R
+sc<-MB_Order(sc,quiet = FALSE, export = TRUE)
+```
+
+#### 2.2.4.1 Plotting the  pseudo-time ordering in a PCA plot
+
+
+```R
+PlotMBorderPCA(sc)
+```
+
+
+#### 2.2.4.2 Plotting the  pseudo-time ordering in a tSNE map
+
+
+```R
+plotOrderMBtsne(sc)
+```
+
+
+#### 2.2.4.3 Plotting the Model-based clusters in heatmap
+
+
+```R
+MBclustheatmap(sc,hmethod="single", plot = TRUE) 
+```
+
+#### 2.2.4.4 Plotting the gene expression of a particular gene in a tSNE map
+
+
+```R
+g='ENSG00000010244'                #### Plotting the expression of  MT-RNR2
+plotexptsneMB(sc,g)
+```
+
+#### 2.2.4.5 Plotting the gene expression of a particular gene in a PCA plot
+
+
+```R
+g <- "ENSG00000010244"       #### Plotting the expression of  MT-RNR2
+PlotMBexpPCA(sc,g)
+```
+
+# 3. Determining differentially expressed genes (DEGs)
+
+Differentially expressed genes between individual clusters are identified using the significance analysis of sequencing data (SAMseq), which is a new function in significance analysis of microarrays (Li and Tibshirani 2011) in the samr package v2.0 (Tibshirani et all., 2015). SAMseq is a non-parametric statistical function dependent on Wilcoxon rank statistic that equalizes the sizes of the library by a resampling method accounting for the various sequencing depths. The analysis is implemented over the pure raw dataset that has the unnormalized expression read counts after excluding the ERCCs. Furthermore, DEGs in each cluster comparing to all the remaining clusters are determined using binomial differential expression, which is based on binomial counting statistics.
+
+![DIsccBIO](MB2.png){width=90%}
+
+## 3.1 Identifying DEGs using SAMseq
+
+The user can define DEGs between all clusters generated by either K-means or model based clustering by applying the “DEGanalysis” function. Another alternative is to define DEGs between particular clusters generated by either K-means or model based clustering by applying the “DEGanalysis2clust” function. The outcome of these two functions is a list of two components:
+- The first component is a data frame showing the Ensembl gage name and the symbole of the detected DEGs
+- The second component is table showing the comparisons, Target cluster, Number of genes and the File name. This component will be used for the downstream analysis.
+
+### 3.1.1 Determining DEGs between two particular clusters
+
+
+```R
+####### differential expression analysis between cluster 2 and cluster 3 of the Model-Based clustering using FDR of 0.05
+MBcdiff<-DEGanalysis2clust(sc,Clustering="MB",K=3,fdr=0.1,name="Name",First="CL1",Second="CL2",export = TRUE,quiet=F)   
+#### To show the result table
+head(MBcdiff[[1]])                  # The first component 
+head(MBcdiff[[2]])                  # The second component 
+```
+
+### 3.1.2 Determining DEGs between all clusters
+
+##                                         ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤ Running this cell will overwrite the previous one ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤
+
+
+```R
+MBcdiff<-DEGanalysis(sc,Clustering="MB",K=3,fdr=0.05,name="all_clusters",export = TRUE,quiet=TRUE)   ####### differential expression analysis between all clusters
+#### To show the result table
+head(MBcdiff[[1]])                  # The first component 
+head(MBcdiff[[2]])                  # The second component
+```
+
+```R
+#### To show the result table
+head(MBcdiff[[1]])                  # The first component 
+head(MBcdiff[[2]])                  # The second component
+```
+
+#### 3.2 Identifying DEGs using binomial differential expression
+
+The function MBClustDiffGenes identifies differentially regulated genes for each cluster of the Model-Based clustering in 
+comparison to the ensemble of all cells. It returns a list with a data.frame element for each cluster that contains the mean expression across all cells not in the cluster (mean.ncl) and in the cluster (mean.cl), the fold-change in the cluster versus all remaining cells (fc), and the p-value for differential expression between all cells in a cluster and all remaining cells. The p-value is computed based on the overlap of negative binomials fitted to the count distributions within the two groups akin to DESeq.
+
+
+```R
+MBcdiffBinomial<-MBClustDiffGenes(sc,K=3,fdr=.01,export=TRUE, quiet=T)    ########## Binomial differential expression analysis
+#### To show the result table
+head(MBcdiffBinomial[[1]])                  # The first component 
+head(MBcdiffBinomial[[2]])                  # The second component
+```
+
+### Plotting the DEGs
+
+Volcano plots are used to readily show the DEGs by plotting significance versus fold-change on the y and x axes, respectively.
+
+
+```R
+name<-MBcdiffBinomial[[2]][2,4]    ############ Selecting the "Up-DEG-cluster2.csv " from the DEGs' binomial table  ##############
+#name<-MBcdiff[[2]][4,6]    ############ Selecting the "Up-DEG-cluster2.csv " from the DEGs' SAMseq table  ##############
+U<-read.csv(file=paste0(name),head=TRUE,sep=",")
+Vplot<-VolcanoPlot(U,value=0.001,name=name,FS=.3,fc=0.5)
+#### In case the output of this function is an error "Error in plot.window(...): need finite 'ylim' values", the adj should be set to TRUE
+### In case the user would like to get the names of the significant DEGs then FS should be set to a value of 0.3 or higher.
+```
+
+## 4. Identifying biomarkers (decision trees and networking analysis) 
+
+There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks 
+
+![DIsccBIO](MB3.png){width=90%}
+
+Decision trees are one of the most efficient classification techniques in biomarkers discovery.  Here we use it to predict the sub-population of a target cell based on transcriptomic data. Two types of decision trees can be performed: classification and regression trees (CART) and J48. The decision tree analysis is implemented over a training dataset, which consisted of the DEGs obtained by either SAMseq or the binomial differential expression. The performance of the generated trees can be evaluated for error estimation by ten-fold cross validation assessment using the "J48DTeval" and "RpartEVAL" functions.
+The decision tree analysis requires the dataset to be class vectored by applying the “ClassVectoringDT” function.
+
+
+```R
+sigDEG<-cdiff[[1]]             # DEGs gene list from SANseq
+#sigDEG<-cdiffBinomial[[1]]      # DEGs gene list from Binomial analysis
+First="CL1"
+Second="CL2"
+DATAforDT<-ClassVectoringDT(sc,Clustering="MB",K=3,First=First,Second=Second,sigDEG)
+```
+
+### 4.1. J48 Decision Tree
+
+
+```R
+j48dt<-J48DT(DATAforDT)
+summary(j48dt) 
+```
+
+#### 4.1.1. Evaluating the performance of the J48 Decision Tree
+
+
+```R
+j48dt<-J48DTeval(DATAforDT,num.folds=10,First=First,Second=Second)
+```
+
+### 4.2. RPART Decision Tree
+
+
+```R
+rpartDT<-RpartDT(DATAforDT)
+```
+
+#### 4.2.1. Evaluating the performance of the RPART Decision Tree
+
+
+```R
+rpartEVAL<-RpartEVAL(DATAforDT,num.folds=10,First=First,Second=Second)
+```
+
+### 4.3. Networking Analysis
+
+To define protein-protein interactions (PPI) over a list of genes, STRING-api is used. The outcome of STRING analysis was stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks.
+
+### 4.3.1 All DEGs
+
+
+```R
+DEGs="All DEGs"
+FileName=paste0(DEGs)
+
+#data<-MBcdiffBinomial[[1]] [,2]    # DEGs gene list from Binomial analysis
+data<-MBcdiff[[1]] [,2]             # From the table of the differential expression analysis between all pairs of clusters
+
+ppi<-PPI(data,FileName)
+
+networking<-NetAnalysis(ppi)
+networking                            ##### In case the Examine response components = 200 and an error "linkmat[i, ]" appeared, that means there are no PPI.
+
+network<-Networking(data,FileName)
+```
+
+### 4.3.2 Particular set of DEGs
+
+
+```R
+############ Selecting the DEGs' table  ##############
+DEGs=cdiffBinomial[[2]][2,4]     # UP-regulated genes in cluster 2 (from the Binomial analysis)
+#DEGs=MBcdiff[[2]][2,6]             # UP-regulated genes in cluster 2 (from SAMseq)
+FileName=paste0(DEGs)
+
+data<-read.csv(file=paste0(DEGs),head=TRUE,sep=",")
+data<-data[,3]
+
+ppi<-PPI(data,FileName)
+
+networking<-NetAnalysis(ppi)
+networking                            ##### In case the Examine response components = 200 and an error "linkmat[i, ]" appeared, that means there are no PPI.
+
+network<-Networking(data,FileName)
+
+```
+
+### 4.4 Gene Enrichment Analysis
+
+```R
+dbs <- listEnrichrDbs()
+head(dbs)
+#print(dbs)
+```
+
+```R
+############ Selecting the DEGs' table  ##############
+DEGs=MBcdiffBinomial[[2]][2,4]     # Up-regulated genes in cluster 2 (from the Binomial analysis)
+#DEGs=MBcdiff[[2]][2,6]              # UP-regulated genes in cluster 2 (from SAMseq)
+data<-read.csv(file=paste0(DEGs),head=TRUE,sep=",")
+data<-as.character(data[,3])
+
+dbs <- c("KEGG_2013","GO_Molecular_Function_2015", "GO_Biological_Process_2015")
+enriched <- enrichr(data, dbs)
+KEGG_2013<-enriched[[1]][,c(1,2,3,9)]
+GO_Molecular_Function_2015<-enriched[[2]][,c(1,2,3,9)]
+GO_Biological_Process_2015<-enriched[[3]][,c(1,2,3,9)]
+
+GEA<-rbind(KEGG_2013,GO_Molecular_Function_2015,GO_Biological_Process_2015)
+GEA
 ```
