--- a/vignettes/DIscBIO-vignette.Rmd
+++ b/vignettes/DIscBIO-vignette.Rmd
@@ -16,7 +16,7 @@ The pipeline consists of four successive steps: data pre-processing, cellular cl
 ## Required Packages
 
 ```{r options, echo=FALSE}
-knitr::opts_chunk$set(fig.width=7, fig.height=7)
+knitr::opts_chunk$set(fig.width=7, fig.height=7, eval=FALSE)
 ```
 
 ```{r}
