Updating the MLS notebook

--- a/notebook/DIscBIO-MLS-Notebook.ipynb
+++ b/notebook/DIscBIO-MLS-Notebook.ipynb
@@ -201,6 +201,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The valuesG1ms dataset consists of single cells from a myxoid liposarcoma cell line. \n",
+    "Myxoid liposarcoma is a rare type of tumor driven by specific fusion oncogenes, normally FUS-DDIT3 [Fletcher et al., 2013], with few other genetic changes [Ståhlberg et al., 2014; Hofvander et al., 2018]. The cells were collected based on their cell cycle phase (G1, S or G2/M), assessed by analyzing their DNA content using Fluorescence Activated Cell Sorter [Karlsson et al., 2017]. Data including ERCC spike-ins, are available in the ArrayExpress database at EMBL-EBI with accession number E-MTAB-6142)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The dataset should be formatted in a data frame where columns refer to samples and rows refer to genes. We provide here the possibility to load the dataset either as \".csv\" or \".rda\" extensions."
    ]
   },
@@ -561,7 +569,7 @@
    "source": [
     "# Plotting the model-based clusters in tSNE maps\n",
     "sc<- comptSNE(sc,rseed=15555,quiet = F)          # to perform the computation of a t-SNE map\n",
-    "plottsne(sc)"
+    "plottSNE(sc)"
    ]
   },
   {
@@ -593,24 +601,9 @@
     }
    ],
    "source": [
-    "# Silhouette plot\n",
-    "#options(repr.plot.width=12, repr.plot.height=25)\n",
-    "#plotSilhouette(sc,K=3)       # K is the number of clusters\n",
-    "\n",
-    "\n",
-    "kpart=sc@MBclusters$clusterid \n",
-    "y <- DIscBIO:::clustfun(\n",
-    "            sc@fdata, clustnr = 3, bootnr = 50,\n",
-    "    metric = \"pearson\", do.gap = TRUE, SE.method = \"Tibs2001SEmax\",\n",
-    "    SE.factor = .25, B.gap = 50, cln = 0, rseed = NULL, quiet = TRUE )\n",
-    "distances <- as.matrix(y$di)\n",
-    "si <- cluster::silhouette(kpart, distances)\n",
-    "plot(si, col = c(\"black\", \"blue\", \"green\"))           # with cluster-wise coloring\n",
-    "\n",
-    "\n",
     "# Silhouette of Model-based clusters\n",
-    "#par(mar=c(6,2,4,2))\n",
-    "#plotSilhouette(sc,K=3)"
+    "par(mar=c(6,2,4,2))\n",
+    "plotSilhouette(sc,K=3)"
    ]
   },
   {
@@ -3043,7 +3036,9 @@
     "networking<-NetAnalysis(ppi)\n",
     "networking                            ##### In case the Examine response components = 200 and an error \"linkmat[i, ]\" appeared, that means there are no PPI.\n",
     "\n",
-    "network<-Networking(data,FileName,plot_width = 25, plot_height = 10)"
+    "# Plotting the network of the top 25 DEGs\n",
+    "DATA<-data[1:25]\n",
+    "network<-Networking(DATA,FileName,plot_width = 25, plot_height = 10)"
    ]
   },
   {
